# File2Link

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py  http_utils.py  main.py  security.py  telegram_service.py
app/routes/: files.py
templates/: index.html  player.html
